NMR-5198: add vm option to fix autocompletion binding to .bat files in analyst-gui and processor-gui