@@ -19,7 +19,7 @@ set dir=%~dp0
 
 set javaexe=java
 set cp="%dir%nmrfx-processor-gui-%nvjver%.jar;%dir%lib/Manifest.jar"
-
+set JAVA_OPTS="--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
 
 set testjava="%dir%jre\bin\java.exe"
 
